# heatwaved-cli

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
heatwaved/: main.py
heatwaved/commands/: config.py  genai.py  generate.py  init.py  lakehouse.py  schema.py  test.py
heatwaved/config/: manager.py
